desktop no longer shows mobile spacing, social mouseovers work, sub-menus are now even with parent.

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -525,6 +525,11 @@ div.nav-footer > ul > li > a {
 	color: $dark-color;
 }
 
+
+.dropdown-submenu > .dropdown-menu {
+	margin-top: 0 !important;
+}
+
 @media (max-width: $screen-md) {
 	footer {
 		padding-left: 10px;
