--- a/sass/showtimes.scss
+++ b/sass/showtimes.scss
@@ -69,10 +69,7 @@ a.ticket-links {
 a:hover{}
 
 @media (max-width: $screen-md-min) {
-	.content {
-		padding-left: 5px;
-		padding-right: 5px;
-	}
+
 
 	section.content td {
 		padding: 0;
@@ -90,7 +87,13 @@ a:hover{}
 
 }
 
-@media screen {
+@media (max-width: $screen-phone){
+	.content {
+		padding-left: 5px;
+		padding-right: 5px;
+	}
+
+
 	.grey-cell, .column-header {
 		width: 90px;
 		height: 90px;
