--- a/sass/tickets.scss
+++ b/sass/tickets.scss
@@ -16,11 +16,11 @@ h1 {
 
 table.pricing-grid {
 	width: 100%;
-	border-spacing: 10px 10px;
 }
 
 td {
 	border: solid 10px $bright;
+	border-left: 0px;
 }
 
 td > p {
@@ -113,10 +113,7 @@ a:hover {
 }
 
 @media (max-width: $screen-md-min) {
-	.content {
-		padding-left: 5px;
-		padding-right: 5px;
-	}
+
 
 	section.content td {
 		padding: 0;
@@ -129,7 +126,13 @@ a:hover {
 
 }
 
-@media screen {
+@media (max-width: $screen-phone) {
+
+	.content {
+		padding-left: 5px;
+		padding-right: 5px;
+	}
+
 	section.content td {
 		padding: 2px;
 		font-size: 20px;
